--- a/Ejercicios 0-100/Ejercicios 0-100.csproj
+++ b/Ejercicios 0-100/Ejercicios 0-100.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Certificado/" />
     <Folder Include="EjerciciosFicheros/" />
   </ItemGroup>
 
