--- a/Ejercicios 0-100/Ejercicios 0-100.csproj
+++ b/Ejercicios 0-100/Ejercicios 0-100.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Certificado/" />
+    <Folder Include="EjerciciosExamen/Ajedrez/" />
     <Folder Include="EjerciciosFicheros/" />
   </ItemGroup>
 
